<resources>
    <string name="app_name">Filharmonia</string>
    <string name="back">Back</string>
    <string name="newses">Aktualności</string>
    <string name="repertoir">Repertuar</string>
    <string name="contests">Konkursy</string>
    <string name="gellery">Galeria</string>
    <string name="contact">Kontakt</string>
    <string name="newsLoading">Ładowanie aktualności</string>
    <string name="news">Aktualność</string>
    <string name="adres">Adres:</string>
    <string name="ul_muzealna_123">ul. Muzealna 123</string>
    <string name="_00_000_d">00-000 Łódź</string>
</resources>
