<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/corner_button"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:text="+48 555 555 555"
                android:id="@+id/txt_call_1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/phone"
                android:layout_marginStart="93dp"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/txt_call_1" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/corner_button"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:text="+48 777 777 777"
                android:id="@+id/txt_call_2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/phone"
                android:layout_marginStart="92dp"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/txt_call_2" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/txt_call_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/corner_button"
                android:gravity="center"
                android:text="+48 999 999 999"
                android:textColor="@color/colorText" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/phone"
                android:layout_marginStart="92dp"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/txt_call_3" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:text="@string/adres" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:text="@string/ul_muzealna_123" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:text="@string/_00_000_d" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/bt_zoom_map"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="17dp"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:background="@drawable/corner_button"
            android:scaleType="fitCenter"
            android:padding="5dp"
            android:src="@drawable/magnifier" />

    </RelativeLayout>


</LinearLayout>